uodated contact details with phone number

--- a/index.html
+++ b/index.html
@@ -149,14 +149,19 @@
                     </div>
                     <div class="col-4 share">
                         <div class="share btn-group-vertical m-4 p-4">
-                        <button type="button" style="font-size:15px;"><a href="https://github.com/pshegde123">Github <i
-                                    class="fa fa-github"></i></a></button>
-                        <button type="button" style="font-size:15px"><a href="https://www.linkedin.com/in/pradnya-hegde/">LinkedIn
-                                <i class="fa fa-linkedin-square"></i></a></button>
-                        <button type="button" style="font-size:15px"><a
-                                href="https://drive.google.com/file/d/1Lq9Emjx9XMpU-Ke6lLbJzCeePRevqkvR/view?usp=sharing"
-                                download>Resume <i class="fa fa-download"></i></a></button>
+                            <button type="button" style="font-size:15px;"><a href="https://github.com/pshegde123">Github
+                                    <i class="fa fa-github"></i></a></button>
+                            <button type="button" style="font-size:15px"><a
+                                    href="https://www.linkedin.com/in/pradnya-hegde/">LinkedIn
+                                    <i class="fa fa-linkedin-square"></i></a></button>
+                            <button type="button" style="font-size:15px"><a
+                                    href="https://drive.google.com/file/d/1Lq9Emjx9XMpU-Ke6lLbJzCeePRevqkvR/view?usp=sharing"
+                                    download>Resume <i class="fa fa-download"></i></a></button>
+                            <div class="contact-details border rounded border-secondary">
+                                <p>Contact: 404-491-8263</p>
+                                <p><a href="mailto:pradnyahegde@gmail.com">Email: pradnyahegde@gmail.com</a></p>
                             </div>
+                        </div>
                     </div>
                     <hr style="width: 100%; background-color:darkgrey; height: 1px;" />
                 </div>
