added liri-bot project to portfolio

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/giphy.png" alt="Quiz">
+                        <img class="card-img-top" src="assets/images/giphy.png" alt="Quiz" style="height: 180px;">
                         <div class="card-body">
                             <p class="card-text bg-dark"><a
                                     href="https://pshegde123.github.io/GifTastic.github.io/">GifTastic</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/trainscheduler.PNG" alt="Quiz">
+                        <img class="card-img-top" src="assets/images/trainscheduler.PNG" alt="Schedule" style="height: 180px;">
                         <div class="card-body">
                             <p class="card-text bg-dark"><a
                                     href="https://pshegde123.github.io/TrainScheduler.github.io/">Train
@@ -114,10 +114,17 @@
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/pokemon.jpg" alt="Quiz">
+                        <img class="card-img-top" src="assets/images/pokemon.jpg" alt="Game" style="height: 180px;">
                         <div class="card-body">
                             <p class="card-text bg-dark"><a
                                     href="https://pshegde123.github.io/pokedex.github.io/">Pokedex</a></p>
+                        </div>
+                    </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/concertthis.PNG" alt="Bot" style="height: 180px;">
+                        <div class="card-body">
+                            <p class="card-text bg-dark"><a
+                                    href="https://github.com/pshegde123/liri-node-app">LIRI Bot</a></p>
                         </div>
                     </div>
                 </div>
