updated portfolio name of nodejs app

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/trainscheduler.PNG" alt="Schedule" style="height: 180px;">
+                        <img class="card-img-top" src="assets/images/trainscheduler.PNG" alt="Schedule"
+                            style="height: 180px;">
                         <div class="card-body">
                             <p class="card-text bg-dark"><a
                                     href="https://pshegde123.github.io/TrainScheduler.github.io/">Train
@@ -123,15 +124,16 @@
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/concertthis.PNG" alt="Bot" style="height: 180px;">
                         <div class="card-body">
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/liri-node-app">LIRI Bot</a></p>
+                            <p class="card-text bg-dark"><a href="https://github.com/pshegde123/liri-node-app">LIRI
+                                    Bot</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/win-restart.PNG" alt="node" style="height: 180px;">
                         <div class="card-body">
                             <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/Constructor-word-game">NodeJS-Word-Guess-Game</a></p>
+                                    href="https://github.com/pshegde123/Constructor-word-game">NodeJS-WordGuess</a>
+                            </p>
                         </div>
                     </div>
                 </div>
