--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
                             </p>
                         </div>
                     </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/customer-purchase.PNG" alt="node" style="height: 180px;">
+                        <div class="card-body">
+                            <p class="card-text bg-dark"><a
+                                    href="https://github.com/pshegde123/NodeJS-Shopping-App">BAmazon</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
