--- a/index.html
+++ b/index.html
@@ -69,102 +69,126 @@
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/psychicgame.PNG" alt="Game">
                         <div class="card-body">
-                            <p class="card-text bg-dark"><a
-                                    href="https://pshegde123.github.io/Psychic-Game.github.io/">Psychic
-                                    Game</a></p>
+                            <h4 class="card-title">Psychic Game</h4>
+                            <p class="card-text bg-dark"><a 
+                                    href="https://github.com/pshegde123/Psychic-Game.github.io">Javascript based
+                                    keyboard input letter guessing game</a>
+                            </p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/hangman.PNG" alt="hangman">
                         <div class="card-body">
-                            <p class="card-text bg-dark"><a href="https://pshegde123.github.io/Word-Guess-Game/">Word
-                                    Guess Game</a></p>
+                            <h4 class="card-title">Word Guess Game</h4>
+                            <p class="card-text bg-dark"><a href="https://github.com/pshegde123/Word-Guess-Game">Javascript based, Hangman style app to guess a superhero name.</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/crystalcollector.PNG" alt="CrystalGame">
                         <div class="card-body">
+                            <h4 class="card-title">Crystal Collector Game</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://pshegde123.github.io/unit-4-game.github.io/">Crystal
-                                    Collector Game</a></p>
+                                    href="https://github.com/pshegde123/unit-4-game.github.io">Number guessing game using Javascript & jQuery</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/Quiz-title.jpg" alt="Quiz">
                         <div class="card-body">
+                            <h4 class="card-title">World Trivia Game</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://pshegde123.github.io/TriviaGame.github.io/">World
-                                    Trivia
-                                    Game</a></p>
+                                    href="https://github.com/pshegde123/TriviaGame.github.io">Multiple choice trivia game created using HTML,CSS and jQuery.</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/giphy.png" alt="Quiz" style="height: 180px;">
                         <div class="card-body">
+                            <h4 class="card-title">GifTastic</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://pshegde123.github.io/GifTastic.github.io/">GifTastic</a></p>
+                                    href="https://github.com/pshegde123/GifTastic.github.io">Random GIF generator app using HTML,Javascript and Giphy API</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/trainscheduler.PNG" alt="Schedule"
                             style="height: 180px;">
                         <div class="card-body">
+                            <h4 class="card-title">Train Scheduler</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://pshegde123.github.io/TrainScheduler.github.io/">Train
-                                    Scheduler</a></p>
+                                    href="https://github.com/pshegde123/TrainScheduler.github.io">jQuery based app to create,update and delete train schedule</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/pokemon.jpg" alt="Game" style="height: 180px;">
                         <div class="card-body">
+                            <h4 class="card-title">Pokedex</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://pshegde123.github.io/pokedex.github.io/">Pokedex</a></p>
+                                    href="https://github.com/pshegde123/pokedex.github.io">Make your online Pokemon deck using HTML/CSS, jQuery and Firebase database.</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/concertthis.PNG" alt="Bot" style="height: 180px;">
                         <div class="card-body">
-                            <p class="card-text bg-dark"><a href="https://github.com/pshegde123/liri-node-app">LIRI
-                                    Bot</a></p>
+                            <h4 class="card-title">LIRI Bot</h4>
+                            <p class="card-text bg-dark"><a href="https://github.com/pshegde123/liri-node-app">CLI based NodeJS app to retrieve data from different web API's</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/win-restart.PNG" alt="node" style="height: 180px;">
                         <div class="card-body">
+                            <h4 class="card-title">NodeJS-WordGuess</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/Constructor-word-game">NodeJS-WordGuess</a>
+                                    href="https://github.com/pshegde123/Constructor-word-game">NodeJS based command line interface game to guess a hidden movie title</a>
                             </p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/customer-purchase.PNG" alt="node" style="height: 180px;">
+                        <img class="card-img-top" src="assets/images/customer-purchase.PNG" alt="node"
+                            style="height: 180px;">
                         <div class="card-body">
+                            <h4 class="card-title">BAmazon</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/NodeJS-Shopping-App">BAmazon</a>
+                                    href="https://github.com/pshegde123/NodeJS-Shopping-App">NodeJS based online shopping app using command line interface</a>
                             </p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/Friendfinder.PNG" alt="node" style="height: 180px;">
+                        <img class="card-img-top" src="assets/images/Friendfinder.PNG" alt="node"
+                            style="height: 180px;">
                         <div class="card-body">
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/FriendFinder">Friend Finder</a>
+                            <h4 class="card-title">Friend Finder</h4>
+                            <p class="card-text bg-dark">
+                            <a href="https://github.com/pshegde123/FriendFinder">
+                                A NodeJS match making application will
+                                help you find a friend
+                            </a>
                             </p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/burger.jpg" alt="node" style="height: 180px;">
                         <div class="card-body">
+                            <h4 class="card-title">Eat-Da-Burger</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/burger">Eat-Da-Burger</a>
+                                    href="https://github.com/pshegde123/burger">MySQL, Node, Express, Handlebars, and ORM based app to list burgers devoured by user</a>
                             </p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/SequelizeBurger.PNG" alt="node" style="height: 180px;">
+                        <img class="card-img-top" src="assets/images/SequelizeBurger.PNG" alt="node"
+                            style="height: 180px;">
                         <div class="card-body">
+                            <h4 class="card-title">Sequelize-Burger</h4>
                             <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/sequelizedBurger">Sequelize-Burger</a>
+                                    href="https://github.com/pshegde123/sequelizedBurger">App using NodeJs,Handlebars and Sequelize to list burgers devoured by the user.</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/Capture.PNG" alt="node"
+                            style="height: 180px;">
+                        <div class="card-body">
+                            <h4 class="card-title">Haunted house locator</h4>
+                            <p class="card-text bg-dark"><a
+                                    href="https://github.com/pshegde123/gt-project2-group4">NodeJS,Sequalize based app to locate huanted houses in Georgia</a>
                             </p>
                         </div>
                     </div>
