Updated Portfolio section to include Github repo link and Live demo link for each project

--- a/index.html
+++ b/index.html
@@ -70,41 +70,52 @@
                         <img class="card-img-top" src="assets/images/psychicgame.PNG" alt="Game">
                         <div class="card-body">
                             <h4 class="card-title">Psychic Game</h4>
-                            <p class="card-text bg-dark"><a 
-                                    href="https://github.com/pshegde123/Psychic-Game.github.io">Javascript based
-                                    keyboard input letter guessing game</a>
-                            </p>
+                            <p class="card-text">Javascript based
+                                keyboard input letter guessing game </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/Psychic-Game.github.io">Check
+                                    Github Repo</a></p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://pshegde123.github.io/Psychic-Game.github.io/">Live
+                                    Demo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/hangman.PNG" alt="hangman">
                         <div class="card-body">
                             <h4 class="card-title">Word Guess Game</h4>
-                            <p class="card-text bg-dark"><a href="https://github.com/pshegde123/Word-Guess-Game">Javascript based, Hangman style app to guess a superhero name.</a></p>
+                            <p class="card-text">Javascript based, Hangman style
+                                app to guess a superhero name.</p>
+                                <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/Word-Guess-Game">Github Repo</a></p>
+                                <p><a target="_blank" style="color:red;" href="https://pshegde123.github.io/Word-Guess-Game/">Live Demo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/crystalcollector.PNG" alt="CrystalGame">
                         <div class="card-body">
                             <h4 class="card-title">Crystal Collector Game</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/unit-4-game.github.io">Number guessing game using Javascript & jQuery</a></p>
+                            <p class="card-text">Number guessing game
+                                using Javascript & jQuery</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/unit-4-game.github.io">Github Repo</a></p>
+                            <p><a target="_blank" style="color:red;" href="https://pshegde123.github.io/unit-4-game.github.io/">Live Demo</a></p>    
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/Quiz-title.jpg" alt="Quiz">
                         <div class="card-body">
                             <h4 class="card-title">World Trivia Game</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/TriviaGame.github.io">Multiple choice trivia game created using HTML,CSS and jQuery.</a></p>
+                            <p class="card-text">Multiple choice trivia
+                                game created using HTML,CSS and jQuery.</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/TriviaGame.github.io">Github Repo</a></p>
+                            <p><a target="_blank" style="color:red;" href="https://pshegde123.github.io/TriviaGame.github.io/">Live Demo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/giphy.png" alt="Quiz" style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">GifTastic</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/GifTastic.github.io">Random GIF generator app using HTML,Javascript and Giphy API</a></p>
+                            <p class="card-text">Random GIF generator app
+                                using HTML,Javascript and Giphy API</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/GifTastic.github.io">Github Repo</a></p>
+                            <p><a target="_blank" style="color:red;" href="https://pshegde123.github.io/GifTastic.github.io/">Live Demo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
@@ -112,31 +123,38 @@
                             style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">Train Scheduler</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/TrainScheduler.github.io">jQuery based app to create,update and delete train schedule</a></p>
+                            <p class="card-text">jQuery based app to
+                                create,update and delete train schedule</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/TrainScheduler.github.io">Github Repo</a></p>
+                            <p><a target="_blank" style="color:red;" href="https://pshegde123.github.io/TrainScheduler.github.io/">Live Demo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/pokemon.jpg" alt="Game" style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">Pokedex</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/pokedex.github.io">Make your online Pokemon deck using HTML/CSS, jQuery and Firebase database.</a></p>
+                            <p class="card-text">Make your online Pokemon deck using HTML/CSS, jQuery and Firebase database.</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/pokedex.github.io">Github Repo</a></p>
+                            <p><a target="_blank" style="color:red;" href="https://pshegde123.github.io/pokedex.github.io/">Live Demo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/concertthis.PNG" alt="Bot" style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">LIRI Bot</h4>
-                            <p class="card-text bg-dark"><a href="https://github.com/pshegde123/liri-node-app">CLI based NodeJS app to retrieve data from different web API's</a></p>
+                            <p class="card-text">CLI based
+                                NodeJS app to retrieve data from different web API's</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/liri-node-app">Github Repo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/win-restart.PNG" alt="node" style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">NodeJS-WordGuess</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/Constructor-word-game">NodeJS based command line interface game to guess a hidden movie title</a>
+                            <p class="card-text">NodeJS based command line
+                                interface game to guess a hidden movie title</p>
+                            <p>
+                                <a target="_blank" style="color:red;" href="https://github.com/pshegde123/Constructor-word-game">Github Repo</a>
                             </p>
                         </div>
                     </div>
@@ -145,8 +163,9 @@
                             style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">BAmazon</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/NodeJS-Shopping-App">NodeJS based online shopping app using command line interface</a>
+                            <p class="card-text">NodeJS based online
+                                shopping app using command line interface</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/NodeJS-Shopping-App">Github Repo</a>
                             </p>
                         </div>
                     </div>
@@ -155,20 +174,26 @@
                             style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">Friend Finder</h4>
-                            <p class="card-text bg-dark">
-                            <a href="https://github.com/pshegde123/FriendFinder">
-                                A NodeJS match making application will
-                                help you find a friend
-                            </a>
+                            <p class="card-text">A NodeJS match making application will
+                                help you find a friend</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/FriendFinder">
+                                    Github Repo
+                                </a>
                             </p>
+                            <p><a target="_blank" style="color:red;" href="https://hw-friendfinder.herokuapp.com/">Live Demo</a></p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/burger.jpg" alt="node" style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">Eat-Da-Burger</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/burger">MySQL, Node, Express, Handlebars, and ORM based app to list burgers devoured by user</a>
+                            <p class="card-text">MySQL, Node,
+                                Express, Handlebars, and ORM based app to list burgers devoured by user</p>
+                            <p>
+                                <a target="_blank" style="color:red;" href="https://github.com/pshegde123/burger">Github Repo</a>
+                            </p>
+                            <p>
+                                <a target="_blank" style="color:red;" href="https://eatdaburger-nodeapp.herokuapp.com/">Live Demo</a>
                             </p>
                         </div>
                     </div>
@@ -177,19 +202,25 @@
                             style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">Sequelize-Burger</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/sequelizedBurger">App using NodeJs,Handlebars and Sequelize to list burgers devoured by the user.</a>
+                            <p class="card-text">App
+                                using NodeJs,Handlebars and Sequelize to list burgers devoured by the user.</p>
+                            <p><a target="_blank" style="color:red;" href="https://github.com/pshegde123/sequelizedBurger">Github Repo</a>
+                            <p><a target="_blank" style="color:red;" href="https://sequelize-burgernfries.herokuapp.com/burgers">Live Demo</a>
                             </p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/Capture.PNG" alt="node"
-                            style="height: 180px;">
+                        <img class="card-img-top" src="assets/images/Capture.PNG" alt="node" style="height: 180px;">
                         <div class="card-body">
                             <h4 class="card-title">Haunted house locator</h4>
-                            <p class="card-text bg-dark"><a
-                                    href="https://github.com/pshegde123/gt-project2-group4">NodeJS,Sequalize based app to locate huanted houses in Georgia</a>
+                            <p class="card-text">NodeJS,Sequalize based app
+                                to locate huanted houses in Georgia</p>
+                            <p><a target="_blank" style="color:red;"
+                                    href="https://github.com/pshegde123/gt-project2-group4">Github Repo</a>
                             </p>
+                            <p><a target="_blank" style="color:red;"
+                                href="https://hounted-house-locator.herokuapp.com/">Live Demo</a>
+                        </p>
                         </div>
                     </div>
                 </div>
