--- a/index.html
+++ b/index.html
@@ -223,6 +223,19 @@
                         </p>
                         </div>
                     </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/webScraper.PNG" alt="node" style="height: 180px;">
+                        <div class="card-body">
+                            <h4 class="card-title">Web Scraper</h4>
+                            <p class="card-text">Scrape stock market news using Node and MongoDB</p>
+                            <p><a target="_blank" style="color:red;"
+                                    href="https://github.com/pshegde123/web-scrapper">Github Repo</a>
+                            </p>
+                            <p><a target="_blank" style="color:red;"
+                                href="https://marketnews-scraper.herokuapp.com/">Live Demo</a>
+                        </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
