--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
                         </p>
                         </div>
                     </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/CliclyGameImage.PNG" alt="node" style="height: 180px;">
+                        <div class="card-body">
+                            <h4 class="card-title">Clicky Game</h4>
+                            <p class="card-text">React based image clicking game</p>
+                            <p><a target="_blank" style="color:red;"
+                                    href="https://github.com/pshegde123/ReactClickyGame">Github Repo</a>
+                            </p>
+                            <p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/ReactClickyGame/">Live Demo</a>
+                        </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
