--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item nav-link">
+                    <a class="nav-link" href="#challenges">Coding Challenges</a>
+                </li>
+                <li class="nav-item nav-link">
                     <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
