Modified 'challenges' div content

--- a/index.html
+++ b/index.html
@@ -268,6 +268,45 @@
                 </div>
             </div>
         </div>
+         <!-- Begin challenges page content -->
+        <div id="challenges" class="challenges">
+            <div class="container text-left pt-1">
+                <h3>{ Coding Challenges }</h3>
+                <hr style="width: 100%; background-color:darkgrey; height: 1px;" />                
+                <div class="container-grid d-flex justify-content-center">
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/wwcode.png" alt="Game">
+                        <div class="card-body">
+                            <h4 class="card-title">Days Of Code 2023</h4>
+                            <p class="card-text">Women Who Code organized 30 day Javascript code challenge 
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/wwcode-days-of-code-challenge-2024">Check
+                                    Github Repo</a></p>                            
+                        </div>
+                    </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/wwcode.png" alt="Game">
+                        <div class="card-body">
+                            <h4 class="card-title">Days Of Code 2023</h4>
+                            <p class="card-text">Women Who Code organized 30 day Javascript code challenge 
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/wwcode-days-of-code-challenge-2024">Check
+                                    Github Repo</a></p>                            
+                        </div>
+                    </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/wwcode.png" alt="Game">
+                        <div class="card-body">
+                            <h4 class="card-title">Days Of Code 2023</h4>
+                            <p class="card-text">Women Who Code organized 30 day Javascript code challenge 
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/wwcode-days-of-code-challenge-2024">Check
+                                    Github Repo</a></p>                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Begin contact page content -->
         <div id="contact" class="contact">
             <div class="container text-left" style="margin-bottom: 80px;">
