--- a/index.html
+++ b/index.html
@@ -287,11 +287,14 @@
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/wwcode.png" alt="Game">
                         <div class="card-body">
-                            <h4 class="card-title">Days Of Code 2023</h4>
-                            <p class="card-text">Women Who Code organized 30 day Javascript code challenge 
+                            <h4 class="card-title">QR Code Scanner</h4>
+                            <p class="card-text">Responsive, single page app based on HTML and CSS, submitted for FronendMentor.io challenge
                             </p>
-                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/wwcode-days-of-code-challenge-2024">Check
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/qrcode_scanner/tree/main">Check
                                     Github Repo</a></p>                            
+                            <p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/qrcode_scanner/qr-code-component-main/src/index.html">Live Demo</a>
+                            </p>
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
