Updated description for 'Social links' and 'Result summary' page

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <hr style="width: 100%; background-color:darkgrey; height: 1px;" />                
                 <div class="container-grid d-flex justify-content-center">
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/wwcode.png" alt="Game">
+                        <img class="card-img-top" src="assets/images/wwcode.png" alt="Page">
                         <div class="card-body">
                             <h4 class="card-title">Days Of Code 2023</h4>
                             <p class="card-text">Women Who Code organized 30 day Javascript code challenge 
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/wwcode.png" alt="Game">
+                        <img class="card-img-top" src="assets/images/fm_qrcodescanner.jpg" alt="Page">
                         <div class="card-body">
                             <h4 class="card-title">QR Code Scanner</h4>
                             <p class="card-text">Responsive, single page app based on HTML and CSS, submitted for FronendMentor.io challenge
@@ -298,13 +298,29 @@
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/wwcode.png" alt="Game">
+                        <img class="card-img-top" src="assets/images/social_links.jpg" alt="Page">
                         <div class="card-body">
-                            <h4 class="card-title">Days Of Code 2023</h4>
-                            <p class="card-text">Women Who Code organized 30 day Javascript code challenge 
+                            <h4 class="card-title">Social links profile</h4>
+                            <p class="card-text">Responsive, single page app based on HTML and CSS, submitted for FronendMentor.io challenge 
                             </p>
-                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/wwcode-days-of-code-challenge-2024">Check
-                                    Github Repo</a></p>                            
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/SocialLinksProfile">Check
+                                    Github Repo</a></p>     
+                            <p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/SocialLinksProfile/">Live Demo</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/result_summary.jpg" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">Social links profile</h4>
+                            <p class="card-text">Responsive, single page app based on HTML and CSS, submitted for FronendMentor.io challenge 
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/result_summary_component">Check
+                                    Github Repo</a></p>     
+                            <p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/result_summary_component/">Live Demo</a>
+                            </p>
                         </div>
                     </div>
                 </div>
