Added Newsletter subscription project

--- a/index.html
+++ b/index.html
@@ -323,6 +323,19 @@
                             </p>
                         </div>
                     </div>
+                     <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/news_subscription.jpg" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">Newsletter Subscription Form</h4>
+                            <p class="card-text">Responsive, single page app based on React JS and Tailwind CSS, submitted for FronendMentor.io challenge 
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/subscription_page">Check
+                                    Github Repo</a></p>     
+                            <p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/subscription_page/">Live Demo</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
