Update title for result summary component

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/result_summary.jpg" alt="Page">
                         <div class="card-body">
-                            <h4 class="card-title">Social links profile</h4>
+                            <h4 class="card-title">Result Summary Component</h4>
                             <p class="card-text">Responsive, single page app based on HTML and CSS, submitted for FronendMentor.io challenge 
                             </p>
                             <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/result_summary_component">Check
