Added Practice section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item nav-link">
+                    <a class="nav-link" href="#practice">React,JS Practice</a>
+                </li>                
+                <li class="nav-item nav-link">
                     <a class="nav-link" href="#challenges">Coding Challenges</a>
                 </li>
                 <li class="nav-item nav-link">
@@ -268,6 +271,41 @@
                 </div>
             </div>
         </div>
+        <!-- Begin practice page content -->
+        <div id="challenges" class="practice">
+            <div class="container text-left pt-1">
+                <h3>{ React, JS Projects }</h3>
+                <hr style="width: 100%; background-color:darkgrey; height: 1px;" />                
+                <div class="container-grid d-flex justify-content-center">
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/JSQuoteGenerator.png" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">Days Of Code 2023</h4>
+                            <p class="card-text">Javascript based random quotes generator
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/random_quote_generator_jquery">Check
+                                    Github Repo</a></p>
+							<p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/random_quote_generator_jquery/">Live Demo</a>
+                            </p>									
+                        </div>
+                    </div>
+                    <div class="card port-cards" style="width: 18rem;">
+                        <img class="card-img-top" src="assets/images/rmapiapp.jpg" alt="Page">
+                        <div class="card-body">
+                            <h4 class="card-title">QR Code Scanner</h4>
+                            <p class="card-text">React and Tailwind CSS based app to search, filter characters
+                            </p>
+                            <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/reactapp_rickandmortyapi">Check
+                                    Github Repo</a></p>                            
+                            <p><a target="_blank" style="color:red;"
+                                href="https://pshegde123.github.io/reactapp_rickandmortyapi/">Live Demo</a>
+                            </p>
+                        </div>
+                    </div>                   
+                </div>
+            </div>
+        </div>
          <!-- Begin challenges page content -->
         <div id="challenges" class="challenges">
             <div class="container text-left pt-1">
@@ -338,7 +376,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>        
         <!-- Begin contact page content -->
         <div id="contact" class="contact">
             <div class="container text-left" style="margin-bottom: 80px;">
