Updated image name for Rick and morty app

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         </div>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/rmapiapp.jpg" alt="Page">
+                        <img class="card-img-top" src="assets/images/rmapiapp.png" alt="Page">
                         <div class="card-body">
                             <h4 class="card-title">QR Code Scanner</h4>
                             <p class="card-text">React and Tailwind CSS based app to search, filter characters
