Update practice section id

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
         </div>
         <!-- Begin practice page content -->
-        <div id="challenges" class="practice">
+        <div id="practice" class="practice">
             <div class="container text-left pt-1">
                 <h3>{ React, JS Projects }</h3>
                 <hr style="width: 100%; background-color:darkgrey; height: 1px;" />                
@@ -280,7 +280,7 @@
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/JSQuoteGenerator.png" alt="Page">
                         <div class="card-body">
-                            <h4 class="card-title">Days Of Code 2023</h4>
+                            <h4 class="card-title">JS Random Quote Generator</h4>
                             <p class="card-text">Javascript based random quotes generator
                             </p>
                             <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/random_quote_generator_jquery">Check
@@ -293,7 +293,7 @@
                     <div class="card port-cards" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/rmapiapp.png" alt="Page">
                         <div class="card-body">
-                            <h4 class="card-title">QR Code Scanner</h4>
+                            <h4 class="card-title">Rick and Morty Search</h4>
                             <p class="card-text">React and Tailwind CSS based app to search, filter characters
                             </p>
                             <p class="card-text"><a target="_blank" style="color:red;" href="https://github.com/pshegde123/reactapp_rickandmortyapi">Check
