Updated About me description

--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             <img class="profile-image" src="assets/images/profile-1.png" alt="Pradnya" width="400px">
             <div class="paragraph m-4">
                 <p>Hello, my name is Pradnya. I am Atlanta based full stack developer.I am trained in the MERN stack
-                    (Mongo, Express, React, & Node). I also have experience with creating front end designs using
-                    Bootstrap,
-                    JQuery, and HTML, CSS, and Javascript.</p>
+                    (Mongo, Express, React, & Node). I have experience with creating apps using React, Typescript and Tailwind CSS, creating front end designs using
+                    Bootstrap,JQuery, and HTML, CSS, and Javascript.</p>
                 <p> During my career as a Software Developer, i have worked with C,C++ languages on Unix,Linux
                     platforms.
                     I am also a Python and data science enthusiast.
